2009-05-20  Anders Carlsson  <andersca@apple.com>

        Reviewed by Darin Adler and Kevin Decker.

        WebKit side of <rdar://problem/6895072>
        
        Pass the localization as a launch property.
        
        * Plugins/Hosted/NetscapePluginHostManager.mm:
        (WebKit::NetscapePluginHostManager::spawnPluginHost):

2009-05-20  Dan Bernstein  <mitz@apple.com>

        - fix the build after r43918

        * WebCoreSupport/WebChromeClient.h:
        (WebChromeClient::setCursor):

2009-05-20  Darin Adler  <darin@apple.com>

        Reviewed by John Sullivan.

        <rdar://problem/4023899> Shift-Tab skips key views in toolbar in Safari, although Tab
        iterates through them properly

        * WebView/WebView.mm:
        (-[WebView previousValidKeyView]): Work around a bug in -[NSView previousValidKeyView].

2009-05-19  Timothy Hatcher  <timothy@apple.com>

        Add a new private API method that will dispatch pending loads that have been scheduled
        because of recent DOM additions or style changes.

        <rdar://problem/6889218> REGRESSION: Some iChat transcript resources are not
        loaded because willSendRequest doesn't happen immediately

        Reviewed by Antti Koivisto.

        * WebView/WebView.mm:
        (-[WebView _dispatchPendingLoadRequests]): Call Loader::servePendingRequests().
        * WebView/WebViewPrivate.h: Added _dispatchPendingLoadRequests.

2009-05-18  Sam Weinig  <sam@webkit.org>

        <rdar://problem/6899044> Can't see Apple ad on nytimes.com unless I spoof the user agent
        
        Add user agent hack for pointroll.com.

        Reviewed by Steve Falkenburg.

        * WebView/WebView.mm:
        (-[WebView WebCore::_userAgentForURL:WebCore::]):

2009-05-16  Anders Carlsson  <andersca@apple.com>

        Reviewed by Sam Weinig and Dan Bernstein.

        Fix <rdar://problem/6889644>
        
        * Plugins/Hosted/NetscapePluginHostManager.mm: