@@ -581,8 +581,10 @@ static WebHistoryDateKey timeIntervalForBeginningOfDay(NSTimeInterval interval)
 
 - (NSData *)data
 {
-    if (_entriesByDate->isEmpty())
-        return nil;
+    if (_entriesByDate->isEmpty()) {
+        static NSData *emptyHistoryData = (NSData *)CFDataCreate(0, 0, 0);
+        return emptyHistoryData;
+    }
     
     // Ignores the date and item count limits; these are respected when loading instead of when saving, so
     // that clients can learn of discarded items by listening to WebHistoryItemsDiscardedWhileLoadingNotification.
